@@ -29,7 +29,6 @@ java_sources = \
   TimeUtils.java \
   ValuesEvery.java \
   ValuesFilter.java \
-  XMLFormat.java \
   XQException.java
 
 PACKAGE_FNAME = gnu-xquery-util
