@@ -1,3 +1,8 @@
+2006-11-09  Per Bothner  <per@bothner.com>
+
+	* XQuery.java (getFormat): Remogve unused method.
+	(writeFormat): Remove unused class.
+
 2006-10-31  Per Bothner  <per@bothner.com>
 
 	* XQuery.java (trueExp, falseExp): New static fields.
