@@ -1,3 +1,8 @@
+2006-11-09  Per Bothner  <per@bothner.com>
+
+	* XMLFormat.java: Remove unused class.
+	* Makefile.am: Update accordingly.
+
 2006-10-31  Per Bothner  <per@bothner.com>
 
 	* DistinctValues.java (writeBoolean): New method.
