@@ -1,3 +1,7 @@
+2006-11-09  Per Bothner  <per@bothner.com>
+
+	* Language.java (print): Remove unused methods.
+
 2006-11-07  Per Bothner  <per@bothner.com>
 
 	* LetExp.java (compile): Don't allocateVarianble unless Declaration
